# invoicer-server

./: .gitignore  README.md  pyproject.toml
server/: fabfile.py
server/invoices/: admin.py  models.py  urls.py  views.py
server/invoices/jinja2/invoices/: invoice.html
server/invoices/migrations/: 0001_initial.py
server/participants/: admin.py  models.py
server/participants/migrations/: 0001_initial.py
server/server/: settings.py  urls.py
