[tool.poetry]
name = "invoicer"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <marblemonolit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
weasyprint = "^55.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
black = "^22.3.0"
mypy = "^0.930"
django-stubs = {extras = ["compatible-mypy"], version = "^1.11.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = "venv"
